С5.4 Parsing data from websites using lxml

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-.Welcome to Python.org.html
-.Welcome to Python.org_files/
+practice_2023/Welcome to Python.org.html
+practice_2023/Welcome to Python.org_files/
+
+
 .idea/
 
 # Byte-compiled / optimized / DLL files
